Configuração da Api, não finalizado

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,9 +1,44 @@
-.top-bar .top-bar-left h3{
-    margin-bottom: -10px;
+.container{
+    margin-bottom: 50px;
 }
 
+.container .top-bar{
+    margin-bottom: 50px;
+    background-color: #6D7070! important;
+}
+
+.container .top-bar a{
+    color: #fff !important;
+}
+
+.top-bar a::after{
+    border-color: #fff transparent transparent !important;
+}
+
+.top-bar .menu a{
+    color: #6D7070! important;
+}
+
+.top-bar{
+    margin-bottom: 10px;
+}
+
+.top-bar, .top-bar ul{
+    background-color: #fff !important;
+}
+
+.top-bar .top-bar-left .title h3{
+    margin-bottom: -10px;
+    color:#1585cf;
+}
+
+.top-bar .top-bar-left .title{
+    margin-bottom: -10px;
+    color:#737373;
+}
 
 .top-bar .top-bar-right .form-error{
     height: 0px;
     margin: 0px;
 }
+
